# morbo_b

./: README.md
android/app/: build.gradle
android/app/src/androidTest/java/com/example/morbo_bremote/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/morbo_bremote/: BleRoverTransport.kt  HipParser.kt  HipProtocol.kt  MainActivity.kt  PingManager.kt  PingState.kt  RoverLog.kt  RoverState.kt  RoverTransport.kt  TargetState.kt  TelemetryState.kt
android/app/src/main/java/com/example/morbo_bremote/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/morbo_bremote/: ExampleUnitTest.kt
cam_calib/: c920.yaml  capture.py
host/test_utility/: copter_model-Body.stl  log_12v.txt  log_16v.txt  log_proc.py  stb_plot.py  test_utility.py
rpi/: CMakeLists.txt  vpos.json
rpi/src/: comm.cpp  comm.h  controller.cpp  controller.h  host.cpp  host.h  logger.cpp  logger.h  main.cpp  params.cpp  params.h  serial.cpp  serial.h  tcp_server.cpp  tcp_server.h  vodom.cpp  vodom.h
shared/: host_interface.c  host_interface.h  host_interface_cmds.h  mcu_params.h
simulation/: flightsim.py
stm32_fw/main/: CMakeLists.txt  STM32G431KBTX_FLASH.ld
stm32_fw/main/Sources/: main.c  stm32g4xx_it.c  stm32g4xx_it.h
stm32_fw/main/Sources/app/: calibs.c  controller.c  controller.h  engine_control.c  engine_control.h  host_interface.c  host_interface.h  host_interface_cmds.h  host_interface_task.c  host_interface_task.h  imu_reader.c  imu_reader.h  mhelpers.c  mhelpers.h  monitor.c  monitor.h  scenarios.c  scenarios.h
stm32_fw/main/Sources/drivers/: adc.c  adc.h  gpio.c  gpio.h  i2c.c  i2c.h  pca9685.c  pca9685.h  serial.c  serial.h  spi.c  spi.h  system.c  system.h  timer.c  timer.h  timer_ext.c  timer_ext.h
stm32_fw/main/Sources/platform/: FreeRTOSConfig.h  main.c  main.h  stm32g4xx_hal_conf.h  stm32g4xx_hal_msp.c  stm32g4xx_it.c
stm32_fw/main/Startup/: startup_stm32g431kbtx.s
wheels/: wheels.py
